// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TimelineAggregate /> should render properly 1`] = `
.emotion-65 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -200px;
  border-top: 1px solid #3b3b3b;
  height: 44px;
}

.emotion-2 {
  width: 200px;
}

.emotion-1 {
  position: relative;
  height: 100%;
}

.emotion-0 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  width: 100%;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 12px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 0;
  color: #ffffff;
  border-radius: 0;
  height: 100%;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-0,
.emotion-0:hover,
.emotion-0:visited {
  background-color: #3b3b3b;
}

.emotion-0:hover {
  background-color: #808080;
}

.emotion-0[aria-disabled=true] {
  background-color: #3b3b3b;
}

.emotion-64 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
}

.emotion-63 {
  width: 100%;
  height: 100%;
  position: relative;
  padding: 8px;
  border-bottom: 1px solid #191919;
  background-color: #191919;
}

.emotion-4 {
  margin: 0;
  border: 0;
  z-index: 11;
  position: absolute;
  top: 8px;
  bottom: 8px;
  left: calc(0% - 3.5px);
  width: 6px;
  background-color: #191919;
  padding: 2px;
  cursor: pointer;
}

.emotion-3 {
  background-color: #808080;
  width: 100%;
  height: 100%;
}

.emotion-6 {
  margin: 0;
  border: 0;
  z-index: 11;
  position: absolute;
  top: 8px;
  bottom: 8px;
  left: calc(25% - 3.5px);
  width: 6px;
  background-color: #191919;
  padding: 2px;
  cursor: pointer;
}

.emotion-8 {
  margin: 0;
  border: 0;
  z-index: 11;
  position: absolute;
  top: 8px;
  bottom: 8px;
  left: calc(62.5% - 3.5px);
  width: 6px;
  background-color: #191919;
  padding: 2px;
  cursor: pointer;
}

.emotion-10 {
  margin: 0;
  border: 0;
  z-index: 11;
  position: absolute;
  top: 8px;
  bottom: 8px;
  left: calc(37.5% - 3.5px);
  width: 6px;
  background-color: #191919;
  padding: 2px;
  cursor: pointer;
}

.emotion-14 {
  margin: 0;
  border: 0;
  z-index: 11;
  position: absolute;
  top: 8px;
  bottom: 8px;
  left: calc(81.25% - 3.5px);
  width: 6px;
  background-color: #191919;
  padding: 2px;
  cursor: pointer;
}

.emotion-16 {
  margin: 0;
  border: 0;
  z-index: 11;
  position: absolute;
  top: 8px;
  bottom: 8px;
  left: calc(93.75% - 3.5px);
  width: 6px;
  background-color: #191919;
  padding: 2px;
  cursor: pointer;
}

.emotion-18 {
  margin: 0;
  border: 0;
  z-index: 11;
  position: absolute;
  top: 8px;
  bottom: 8px;
  left: calc(6.25% - 3.5px);
  width: 6px;
  background-color: #191919;
  padding: 2px;
  cursor: pointer;
}

.emotion-20 {
  margin: 0;
  border: 0;
  z-index: 11;
  position: absolute;
  top: 8px;
  bottom: 8px;
  left: calc(18.75% - 3.5px);
  width: 6px;
  background-color: #191919;
  padding: 2px;
  cursor: pointer;
}

.emotion-22 {
  margin: 0;
  border: 0;
  z-index: 11;
  position: absolute;
  top: 8px;
  bottom: 8px;
  left: calc(68.75% - 3.5px);
  width: 6px;
  background-color: #191919;
  padding: 2px;
  cursor: pointer;
}

.emotion-24 {
  margin: 0;
  border: 0;
  z-index: 11;
  position: absolute;
  top: 8px;
  bottom: 8px;
  left: calc(43.75% - 3.5px);
  width: 6px;
  background-color: #191919;
  padding: 2px;
  cursor: pointer;
}

.emotion-26 {
  margin: 0;
  border: 0;
  z-index: 11;
  position: absolute;
  top: 8px;
  bottom: 8px;
  left: calc(100% - 3.5px);
  width: 6px;
  background-color: #191919;
  padding: 2px;
  cursor: pointer;
}

<div
  className="emotion-65"
>
  <div
    className="emotion-2"
  >
    <div
      className="emotion-1"
    >
      <button
        aria-label="Toggle Dropdown Menu"
        className="emotion-0"
        onBlur={[Function]}
        onClick={[Function]}
        type="button"
      >
        Timelines (4)
        <svg
          data-file-name="chevron.svg"
          height={20}
        />
      </button>
    </div>
  </div>
  <div
    className="emotion-64"
  >
    <div
      className="emotion-63"
    >
       
      <button
        aria-label="00:00:00"
        className="emotion-4"
        onClick={[Function]}
        title="00:00:00-00:00:02"
        type="button"
      >
        <div
          className="emotion-3"
        />
      </button>
      <button
        aria-label="00:00:04"
        className="emotion-6"
        onClick={[Function]}
        title="00:00:04-00:00:05"
        type="button"
      >
        <div
          className="emotion-3"
        />
      </button>
      <button
        aria-label="00:00:10"
        className="emotion-8"
        onClick={[Function]}
        title="00:00:10-00:00:12"
        type="button"
      >
        <div
          className="emotion-3"
        />
      </button>
      <button
        aria-label="00:00:06"
        className="emotion-10"
        onClick={[Function]}
        title="00:00:06-00:00:07"
        type="button"
      >
        <div
          className="emotion-3"
        />
      </button>
      <button
        aria-label="00:00:06"
        className="emotion-10"
        onClick={[Function]}
        title="00:00:06-00:00:07"
        type="button"
      >
        <div
          className="emotion-3"
        />
      </button>
      <button
        aria-label="00:00:13"
        className="emotion-14"
        onClick={[Function]}
        title="00:00:13-00:00:14"
        type="button"
      >
        <div
          className="emotion-3"
        />
      </button>
      <button
        aria-label="00:00:15"
        className="emotion-16"
        onClick={[Function]}
        title="00:00:15-00:00:15"
        type="button"
      >
        <div
          className="emotion-3"
        />
      </button>
      <button
        aria-label="00:00:01"
        className="emotion-18"
        onClick={[Function]}
        title="00:00:01-00:00:02"
        type="button"
      >
        <div
          className="emotion-3"
        />
      </button>
      <button
        aria-label="00:00:03"
        className="emotion-20"
        onClick={[Function]}
        title="00:00:03-00:00:06"
        type="button"
      >
        <div
          className="emotion-3"
        />
      </button>
      <button
        aria-label="00:00:11"
        className="emotion-22"
        onClick={[Function]}
        title="00:00:11-00:00:15"
        type="button"
      >
        <div
          className="emotion-3"
        />
      </button>
      <button
        aria-label="00:00:07"
        className="emotion-24"
        onClick={[Function]}
        title="00:00:07-00:00:10"
        type="button"
      >
        <div
          className="emotion-3"
        />
      </button>
      <button
        aria-label="00:00:16"
        className="emotion-26"
        onClick={[Function]}
        title="00:00:16-00:00:17"
        type="button"
      >
        <div
          className="emotion-3"
        />
      </button>
      <button
        aria-label="00:00:00"
        className="emotion-4"
        onClick={[Function]}
        title="00:00:00-00:00:02"
        type="button"
      >
        <div
          className="emotion-3"
        />
      </button>
      <button
        aria-label="00:00:04"
        className="emotion-6"
        onClick={[Function]}
        title="00:00:04-00:00:05"
        type="button"
      >
        <div
          className="emotion-3"
        />
      </button>
      <button
        aria-label="00:00:10"
        className="emotion-8"
        onClick={[Function]}
        title="00:00:10-00:00:12"
        type="button"
      >
        <div
          className="emotion-3"
        />
      </button>
      <button
        aria-label="00:00:00"
        className="emotion-4"
        onClick={[Function]}
        title="00:00:00-00:00:02"
        type="button"
      >
        <div
          className="emotion-3"
        />
      </button>
      <button
        aria-label="00:00:04"
        className="emotion-6"
        onClick={[Function]}
        title="00:00:04-00:00:05"
        type="button"
      >
        <div
          className="emotion-3"
        />
      </button>
      <button
        aria-label="00:00:10"
        className="emotion-8"
        onClick={[Function]}
        title="00:00:10-00:00:12"
        type="button"
      >
        <div
          className="emotion-3"
        />
      </button>
      <button
        aria-label="00:00:00"
        className="emotion-4"
        onClick={[Function]}
        title="00:00:00-00:00:02"
        type="button"
      >
        <div
          className="emotion-3"
        />
      </button>
      <button
        aria-label="00:00:04"
        className="emotion-6"
        onClick={[Function]}
        title="00:00:04-00:00:05"
        type="button"
      >
        <div
          className="emotion-3"
        />
      </button>
      <button
        aria-label="00:00:10"
        className="emotion-8"
        onClick={[Function]}
        title="00:00:10-00:00:12"
        type="button"
      >
        <div
          className="emotion-3"
        />
      </button>
      <button
        aria-label="00:00:00"
        className="emotion-4"
        onClick={[Function]}
        title="00:00:00-00:00:02"
        type="button"
      >
        <div
          className="emotion-3"
        />
      </button>
      <button
        aria-label="00:00:04"
        className="emotion-6"
        onClick={[Function]}
        title="00:00:04-00:00:05"
        type="button"
      >
        <div
          className="emotion-3"
        />
      </button>
      <button
        aria-label="00:00:10"
        className="emotion-8"
        onClick={[Function]}
        title="00:00:10-00:00:12"
        type="button"
      >
        <div
          className="emotion-3"
        />
      </button>
      <button
        aria-label="00:00:00"
        className="emotion-4"
        onClick={[Function]}
        title="00:00:00-00:00:02"
        type="button"
      >
        <div
          className="emotion-3"
        />
      </button>
      <button
        aria-label="00:00:04"
        className="emotion-6"
        onClick={[Function]}
        title="00:00:04-00:00:05"
        type="button"
      >
        <div
          className="emotion-3"
        />
      </button>
      <button
        aria-label="00:00:10"
        className="emotion-8"
        onClick={[Function]}
        title="00:00:10-00:00:12"
        type="button"
      >
        <div
          className="emotion-3"
        />
      </button>
      <button
        aria-label="00:00:00"
        className="emotion-4"
        onClick={[Function]}
        title="00:00:00-00:00:02"
        type="button"
      >
        <div
          className="emotion-3"
        />
      </button>
      <button
        aria-label="00:00:04"
        className="emotion-6"
        onClick={[Function]}
        title="00:00:04-00:00:05"
        type="button"
      >
        <div
          className="emotion-3"
        />
      </button>
      <button
        aria-label="00:00:10"
        className="emotion-8"
        onClick={[Function]}
        title="00:00:10-00:00:12"
        type="button"
      >
        <div
          className="emotion-3"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`<TimelineAggregate /> should render properly 2`] = `
.emotion-107 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -200px;
  border-top: 1px solid #3b3b3b;
  height: 44px;
}

.emotion-44 {
  width: 200px;
}

.emotion-43 {
  position: relative;
  height: 100%;
}

.emotion-106 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
}

.emotion-105 {
  width: 100%;
  height: 100%;
  position: relative;
  padding: 8px;
  border-bottom: 1px solid #191919;
  background-color: #191919;
}

.emotion-46 {
  margin: 0;
  border: 0;
  z-index: 11;
  position: absolute;
  top: 8px;
  bottom: 8px;
  left: calc(0% - 3.5px);
  width: 6px;
  background-color: #191919;
  padding: 2px;
  cursor: pointer;
}

.emotion-45 {
  background-color: #808080;
  width: 100%;
  height: 100%;
}

.emotion-48 {
  margin: 0;
  border: 0;
  z-index: 11;
  position: absolute;
  top: 8px;
  bottom: 8px;
  left: calc(25% - 3.5px);
  width: 6px;
  background-color: #191919;
  padding: 2px;
  cursor: pointer;
}

.emotion-50 {
  margin: 0;
  border: 0;
  z-index: 11;
  position: absolute;
  top: 8px;
  bottom: 8px;
  left: calc(62.5% - 3.5px);
  width: 6px;
  background-color: #191919;
  padding: 2px;
  cursor: pointer;
}

.emotion-52 {
  margin: 0;
  border: 0;
  z-index: 11;
  position: absolute;
  top: 8px;
  bottom: 8px;
  left: calc(37.5% - 3.5px);
  width: 6px;
  background-color: #191919;
  padding: 2px;
  cursor: pointer;
}

.emotion-56 {
  margin: 0;
  border: 0;
  z-index: 11;
  position: absolute;
  top: 8px;
  bottom: 8px;
  left: calc(81.25% - 3.5px);
  width: 6px;
  background-color: #191919;
  padding: 2px;
  cursor: pointer;
}

.emotion-58 {
  margin: 0;
  border: 0;
  z-index: 11;
  position: absolute;
  top: 8px;
  bottom: 8px;
  left: calc(93.75% - 3.5px);
  width: 6px;
  background-color: #191919;
  padding: 2px;
  cursor: pointer;
}

.emotion-60 {
  margin: 0;
  border: 0;
  z-index: 11;
  position: absolute;
  top: 8px;
  bottom: 8px;
  left: calc(6.25% - 3.5px);
  width: 6px;
  background-color: #191919;
  padding: 2px;
  cursor: pointer;
}

.emotion-62 {
  margin: 0;
  border: 0;
  z-index: 11;
  position: absolute;
  top: 8px;
  bottom: 8px;
  left: calc(18.75% - 3.5px);
  width: 6px;
  background-color: #191919;
  padding: 2px;
  cursor: pointer;
}

.emotion-64 {
  margin: 0;
  border: 0;
  z-index: 11;
  position: absolute;
  top: 8px;
  bottom: 8px;
  left: calc(68.75% - 3.5px);
  width: 6px;
  background-color: #191919;
  padding: 2px;
  cursor: pointer;
}

.emotion-66 {
  margin: 0;
  border: 0;
  z-index: 11;
  position: absolute;
  top: 8px;
  bottom: 8px;
  left: calc(43.75% - 3.5px);
  width: 6px;
  background-color: #191919;
  padding: 2px;
  cursor: pointer;
}

.emotion-68 {
  margin: 0;
  border: 0;
  z-index: 11;
  position: absolute;
  top: 8px;
  bottom: 8px;
  left: calc(100% - 3.5px);
  width: 6px;
  background-color: #191919;
  padding: 2px;
  cursor: pointer;
}

.emotion-0 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  width: 100%;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 12px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 0;
  color: #ffffff;
  border-radius: 0;
  height: 100%;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-0,
.emotion-0:hover,
.emotion-0:visited {
  background-color: #808080;
}

.emotion-0:hover {
  background-color: #808080;
}

.emotion-0[aria-disabled=true] {
  background-color: #3b3b3b;
}

.emotion-42 {
  position: absolute;
  z-index: 1;
  top: 100%;
  right: 0;
  left: 0;
  background-color: #808080;
  border-radius: 2px;
  box-shadow: 0 4px 7px 0 #000000;
  min-width: 200px;
  font-family: Roboto,Avenir,"sans-serif";
}

.emotion-42 ul {
  list-style-type: none;
  padding: 0;
  padding-top: 4px;
  padding-bottom: 4px;
  margin: 0;
}

.emotion-42 li {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-41 {
  background-color: #4a4a4a;
  max-height: 312px;
  overflow-y: auto;
}

.emotion-8 {
  border-bottom: 2px solid #808080;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  border-top: 2px solid #808080;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-1 {
  padding: 0;
  width: 16px;
  height: 16px;
  -webkit-appearance: none;
  background-color: #73b61c;
  border: 2px solid #73b61c;
  border-radius: 2px;
  cursor: pointer;
}

.emotion-3 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
}

.emotion-2 path {
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  opacity: 100;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  padding-left: 8px;
}

.emotion-5 {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.emotion-14 {
  padding-left: 2px;
}

<div
  className="emotion-107"
>
  <div
    className="emotion-44"
  >
    <div
      className="emotion-43"
    >
      <button
        aria-label="Toggle Dropdown Menu"
        className="emotion-0"
        onBlur={[Function]}
        onClick={[Function]}
        type="button"
      >
        Timelines (4)
        <svg
          data-file-name="chevron.svg"
          height={20}
        />
      </button>
      <div
        className="emotion-42"
      >
        <div
          className="emotion-41"
          tabIndex="1"
        >
          <div
            className="emotion-8"
          >
            <label
              className="emotion-7"
            >
              <div
                className="emotion-4"
              >
                <input
                  className="emotion-1"
                  defaultChecked={true}
                  onClick={[Function]}
                  type="checkbox"
                  value="all"
                />
                <div
                  className="emotion-3"
                >
                  <svg
                    className="emotion-2"
                    data-file-name="checkmark.svg"
                    height={20}
                  />
                </div>
              </div>
              <div
                className="emotion-6"
              >
                <span
                  className="emotion-5"
                >
                  All
                </span>
              </div>
            </label>
          </div>
          <label
            className="emotion-7"
          >
            <div
              className="emotion-4"
            >
              <input
                className="emotion-1"
                defaultChecked={true}
                onClick={[Function]}
                type="checkbox"
                value="gcp-video-label-detection"
              />
              <div
                className="emotion-3"
              >
                <svg
                  className="emotion-2"
                  data-file-name="checkmark.svg"
                  height={20}
                />
              </div>
            </div>
            <div
              className="emotion-6"
            >
              <span
                className="emotion-5"
              >
                gcp-video-label-detection
              </span>
              <span
                className="emotion-14"
              >
                (2)
              </span>
            </div>
          </label>
          <label
            className="emotion-7"
          >
            <div
              className="emotion-4"
            >
              <input
                className="emotion-1"
                defaultChecked={true}
                onClick={[Function]}
                type="checkbox"
                value="gcp-video-logo-detection"
              />
              <div
                className="emotion-3"
              >
                <svg
                  className="emotion-2"
                  data-file-name="checkmark.svg"
                  height={20}
                />
              </div>
            </div>
            <div
              className="emotion-6"
            >
              <span
                className="emotion-5"
              >
                gcp-video-logo-detection
              </span>
              <span
                className="emotion-14"
              >
                (3)
              </span>
            </div>
          </label>
          <label
            className="emotion-7"
          >
            <div
              className="emotion-4"
            >
              <input
                className="emotion-1"
                defaultChecked={true}
                onClick={[Function]}
                type="checkbox"
                value="gcp-video-object-detection"
              />
              <div
                className="emotion-3"
              >
                <svg
                  className="emotion-2"
                  data-file-name="checkmark.svg"
                  height={20}
                />
              </div>
            </div>
            <div
              className="emotion-6"
            >
              <span
                className="emotion-5"
              >
                gcp-video-object-detection
              </span>
              <span
                className="emotion-14"
              >
                (3)
              </span>
            </div>
          </label>
          <label
            className="emotion-7"
          >
            <div
              className="emotion-4"
            >
              <input
                className="emotion-1"
                defaultChecked={true}
                onClick={[Function]}
                type="checkbox"
                value="gcp-video-text-detection"
              />
              <div
                className="emotion-3"
              >
                <svg
                  className="emotion-2"
                  data-file-name="checkmark.svg"
                  height={20}
                />
              </div>
            </div>
            <div
              className="emotion-6"
            >
              <span
                className="emotion-5"
              >
                gcp-video-text-detection
              </span>
              <span
                className="emotion-14"
              >
                (3)
              </span>
            </div>
          </label>
        </div>
      </div>
    </div>
  </div>
  <div
    className="emotion-106"
  >
    <div
      className="emotion-105"
    >
       
      <button
        aria-label="00:00:00"
        className="emotion-46"
        onClick={[Function]}
        title="00:00:00-00:00:02"
        type="button"
      >
        <div
          className="emotion-45"
        />
      </button>
      <button
        aria-label="00:00:04"
        className="emotion-48"
        onClick={[Function]}
        title="00:00:04-00:00:05"
        type="button"
      >
        <div
          className="emotion-45"
        />
      </button>
      <button
        aria-label="00:00:10"
        className="emotion-50"
        onClick={[Function]}
        title="00:00:10-00:00:12"
        type="button"
      >
        <div
          className="emotion-45"
        />
      </button>
      <button
        aria-label="00:00:06"
        className="emotion-52"
        onClick={[Function]}
        title="00:00:06-00:00:07"
        type="button"
      >
        <div
          className="emotion-45"
        />
      </button>
      <button
        aria-label="00:00:06"
        className="emotion-52"
        onClick={[Function]}
        title="00:00:06-00:00:07"
        type="button"
      >
        <div
          className="emotion-45"
        />
      </button>
      <button
        aria-label="00:00:13"
        className="emotion-56"
        onClick={[Function]}
        title="00:00:13-00:00:14"
        type="button"
      >
        <div
          className="emotion-45"
        />
      </button>
      <button
        aria-label="00:00:15"
        className="emotion-58"
        onClick={[Function]}
        title="00:00:15-00:00:15"
        type="button"
      >
        <div
          className="emotion-45"
        />
      </button>
      <button
        aria-label="00:00:01"
        className="emotion-60"
        onClick={[Function]}
        title="00:00:01-00:00:02"
        type="button"
      >
        <div
          className="emotion-45"
        />
      </button>
      <button
        aria-label="00:00:03"
        className="emotion-62"
        onClick={[Function]}
        title="00:00:03-00:00:06"
        type="button"
      >
        <div
          className="emotion-45"
        />
      </button>
      <button
        aria-label="00:00:11"
        className="emotion-64"
        onClick={[Function]}
        title="00:00:11-00:00:15"
        type="button"
      >
        <div
          className="emotion-45"
        />
      </button>
      <button
        aria-label="00:00:07"
        className="emotion-66"
        onClick={[Function]}
        title="00:00:07-00:00:10"
        type="button"
      >
        <div
          className="emotion-45"
        />
      </button>
      <button
        aria-label="00:00:16"
        className="emotion-68"
        onClick={[Function]}
        title="00:00:16-00:00:17"
        type="button"
      >
        <div
          className="emotion-45"
        />
      </button>
      <button
        aria-label="00:00:00"
        className="emotion-46"
        onClick={[Function]}
        title="00:00:00-00:00:02"
        type="button"
      >
        <div
          className="emotion-45"
        />
      </button>
      <button
        aria-label="00:00:04"
        className="emotion-48"
        onClick={[Function]}
        title="00:00:04-00:00:05"
        type="button"
      >
        <div
          className="emotion-45"
        />
      </button>
      <button
        aria-label="00:00:10"
        className="emotion-50"
        onClick={[Function]}
        title="00:00:10-00:00:12"
        type="button"
      >
        <div
          className="emotion-45"
        />
      </button>
      <button
        aria-label="00:00:00"
        className="emotion-46"
        onClick={[Function]}
        title="00:00:00-00:00:02"
        type="button"
      >
        <div
          className="emotion-45"
        />
      </button>
      <button
        aria-label="00:00:04"
        className="emotion-48"
        onClick={[Function]}
        title="00:00:04-00:00:05"
        type="button"
      >
        <div
          className="emotion-45"
        />
      </button>
      <button
        aria-label="00:00:10"
        className="emotion-50"
        onClick={[Function]}
        title="00:00:10-00:00:12"
        type="button"
      >
        <div
          className="emotion-45"
        />
      </button>
      <button
        aria-label="00:00:00"
        className="emotion-46"
        onClick={[Function]}
        title="00:00:00-00:00:02"
        type="button"
      >
        <div
          className="emotion-45"
        />
      </button>
      <button
        aria-label="00:00:04"
        className="emotion-48"
        onClick={[Function]}
        title="00:00:04-00:00:05"
        type="button"
      >
        <div
          className="emotion-45"
        />
      </button>
      <button
        aria-label="00:00:10"
        className="emotion-50"
        onClick={[Function]}
        title="00:00:10-00:00:12"
        type="button"
      >
        <div
          className="emotion-45"
        />
      </button>
      <button
        aria-label="00:00:00"
        className="emotion-46"
        onClick={[Function]}
        title="00:00:00-00:00:02"
        type="button"
      >
        <div
          className="emotion-45"
        />
      </button>
      <button
        aria-label="00:00:04"
        className="emotion-48"
        onClick={[Function]}
        title="00:00:04-00:00:05"
        type="button"
      >
        <div
          className="emotion-45"
        />
      </button>
      <button
        aria-label="00:00:10"
        className="emotion-50"
        onClick={[Function]}
        title="00:00:10-00:00:12"
        type="button"
      >
        <div
          className="emotion-45"
        />
      </button>
      <button
        aria-label="00:00:00"
        className="emotion-46"
        onClick={[Function]}
        title="00:00:00-00:00:02"
        type="button"
      >
        <div
          className="emotion-45"
        />
      </button>
      <button
        aria-label="00:00:04"
        className="emotion-48"
        onClick={[Function]}
        title="00:00:04-00:00:05"
        type="button"
      >
        <div
          className="emotion-45"
        />
      </button>
      <button
        aria-label="00:00:10"
        className="emotion-50"
        onClick={[Function]}
        title="00:00:10-00:00:12"
        type="button"
      >
        <div
          className="emotion-45"
        />
      </button>
      <button
        aria-label="00:00:00"
        className="emotion-46"
        onClick={[Function]}
        title="00:00:00-00:00:02"
        type="button"
      >
        <div
          className="emotion-45"
        />
      </button>
      <button
        aria-label="00:00:04"
        className="emotion-48"
        onClick={[Function]}
        title="00:00:04-00:00:05"
        type="button"
      >
        <div
          className="emotion-45"
        />
      </button>
      <button
        aria-label="00:00:10"
        className="emotion-50"
        onClick={[Function]}
        title="00:00:10-00:00:12"
        type="button"
      >
        <div
          className="emotion-45"
        />
      </button>
    </div>
  </div>
</div>
`;
